--- a/styles/global.css
+++ b/styles/global.css
@@ -1,15 +1,26 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Open+Sans:wght@600&display=swap");
 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  background: #f8f9fa;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 * {
